[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/LEVEL.gd" type="Script" id=1]
[ext_resource path="res://ColorTiles/ColorTilesRoot.tscn" type="PackedScene" id=2]
[ext_resource path="res://ColorTiles/ColorTiles3.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://ColorTiles/FlatColorTiles.gd" type="Script" id=4]
[ext_resource path="res://characters/GZEMO/GZEMO.tscn" type="PackedScene" id=5]
[ext_resource path="res://ColorCam/ColorCamera.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/EditorCamera.gd" type="Script" id=7]
[ext_resource path="res://CMYK.png" type="Texture" id=8]

[sub_resource type="Environment" id=1]
background_mode = 1
glow_enabled = true
glow_intensity = 0.5
glow_strength = 0.9
glow_bloom = 0.9
glow_blend_mode = 1
glow_bicubic_upscale = true

[node name="LevelRoot" type="Spatial"]
script = ExtResource( 1 )

[node name="ColorTiles" parent="." instance=ExtResource( 2 )]
visible = false
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray(  )
}

[node name="FLATColorTiles" parent="." instance=ExtResource( 2 )]
mesh_library = ExtResource( 3 )
data = {
"cells": PoolIntArray(  )
}
script = ExtResource( 4 )

[node name="GZEMO" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 0, 0, 0 )

[node name="SpawnPoint" type="Position3D" parent="."]

[node name="CameraRoot" parent="." instance=ExtResource( 6 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="EditorCamera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.408254, 0.577346, 0, 0.816491, 0.577359, -0.707107, -0.408254, 0.577346, 45, 45, 45 )
projection = 1
size = 65.0
script = ExtResource( 7 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
bbcode_enabled = true

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -128.0
texture = ExtResource( 8 )
[connection signal="rotation_end" from="CameraRoot" to="GZEMO" method="_on_CameraRoot_rotation_end"]
[connection signal="rotation_end" from="CameraRoot" to="ColorTiles" method="_on_CameraRoot_rotation_end"]
[connection signal="rotation_end" from="CameraRoot" to="FLATColorTiles" method="_on_CameraRoot_rotation_end"]
[connection signal="rotation_start" from="CameraRoot" to="GZEMO" method="_on_CameraRoot_rotation_start"]
[connection signal="rotation_start" from="CameraRoot" to="ColorTiles" method="_on_CameraRoot_rotation_start"]
[connection signal="rotation_start" from="CameraRoot" to="FLATColorTiles" method="_on_CameraRoot_rotation_start"]
